2009-01-20  Darin Adler  <darin@apple.com>

        * runtime/StringPrototype.cpp:
        (JSC::substituteBackreferences): Add back the initialization to fix the build.

2009-01-20  Darin Adler  <darin@apple.com>

        Reviewed by Mark Rowe.

        Bug 23352: Turn on more compiler warnings in the Mac build
        https://bugs.webkit.org/show_bug.cgi?id=23352

        First patch: Fix some simple cases of various warnings.

        * pcre/pcre_compile.cpp:
        (jsRegExpCompile): Use const_cast to change const-ness.

        * runtime/StringPrototype.cpp:
        (JSC::substituteBackreferences): Remove unneeded initialization and
        use UChar instead of unsigned short for UTF-16 values.

        * wtf/dtoa.cpp:
        (WTF::strtod): Use const_cast to change const-ness.

2009-01-20  Oliver Hunt  <oliver@apple.com>

        Reviewed by NOBODY (build fix).

        Whoops, remove runtime/ByteArray references from .pri and .scons builds, update .bkl

        * JavaScriptCore.pri:
        * JavaScriptCore.scons:
        * JavaScriptCoreSources.bkl:

2009-01-20  Oliver Hunt  <oliver@apple.com>

        RS=Dan Bernstein.

        Move runtime/ByteArray to wtf/ByteArray

        * GNUmakefile.am:
        * JavaScriptCore.exp:
        * JavaScriptCore.pri:
        * JavaScriptCore.scons:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:
        * JavaScriptCore.vcproj/WTF/WTF.vcproj:
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * runtime/JSByteArray.cpp:
        * runtime/JSByteArray.h:
        * wtf/ByteArray.cpp: Renamed from JavaScriptCore/runtime/ByteArray.cpp.
        (WTF::ByteArray::create):
        * wtf/ByteArray.h: Renamed from JavaScriptCore/runtime/ByteArray.h.
        (WTF::ByteArray::length):
        (WTF::ByteArray::set):
        (WTF::ByteArray::get):
        (WTF::ByteArray::data):
        (WTF::ByteArray::deref):
        (WTF::ByteArray::ByteArray):

2009-01-19  Sam Weinig  <sam@webkit.org>
